2011-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx:
 - Made PQAlloc contain a std::shared_ptr, not derive from it.
 - As per patch in #236; fixes Visual Studio build problems.
 - Thanks Sam Kapilivsky.
2011-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test_helpers.hxx:
 - New trick for accepting (and requiring) semicolon after PQXX_CHECK_THROWS.
 - Less idiomatic, but avoids Visual Studio warning.
 - Completes the fix for #231.
2011-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/compiler-internal.hxx, test/test087.cxx:
 - Suppress pointless Visual Studio warnings.
 - Fixes most of #231; more discussion about test_helpers.hxx patch.
 - Thanks Sam Kapilivsky.
2011-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/cursor.cxx:
 - Cast around std::streamsize/icursorstream::difference_type mismatch.
 - Fixes icursorstream::ignore, as per #230.
 - Thanks once more Sam Kapilivsky.
2011-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/compiler-internal.hxx, include/pqxx/cursor.hxx,
 include/pqxx/util.hxx, test/unit/test_prepared_statement.cxx:
 - Moved distance() wrapper from compiler-internal into util.
 - Added some missing PQXX_LIBEXPORT directives.
 - Fixes #237.
 - Thanks Sam Kapilivsky for knocking the Visual Studio build into shape.
2011-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/strconv.hxx:
 - Add redundant string_traits<const char[N]> to keep Visual Studio happy.
 - Fixes #233; thanks Sam Kapilivsky.
 test/unit/test_string_conversion.cxx:
 - New.
 - Unit-tests string conversions (for now, only of various string types).
2011-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/unit/test_prepared_statement.cxx:
 - Fixed two Visual Studio warnings.
 - Fixes #234.  Thanks (you guessed it) Sam Kapilivsky.
2011-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/vc-libpqxx.mak.template:
 - Fixed typos introduced in my application of the patch in #228.
 - Should get Visual Studio build working again.