@@ -1,0 +1,11 @@
+#define HAVE_SYS_TYPES_H 1
+/* #define HAVE_UNISTD_H 1 */
+#define PQXX_HAVE_COUNT_IF 1
+#define PQXX_HAVE_IMBUE 1
+#define PQXX_HAVE_LOCALE 1
+#define PQXX_HAVE_QUIET_NAN 1
+/* #define PQXX_HAVE_SLEEP 1 */
+#define PQXX_HAVE_STRING_CLEAR 1
+/* #define PQXX_HAVE_SYS_SELECT_H 1 */
+#define PQXX_SELECT_ACCEPTS_NULL 1
+#define HAVE_VSNPRINTF_DECL 1
