@@ -2,11 +2,13 @@
  - API change: noticers are gone!  Use errorhandlers to capture error output.
  - API change: prepared statements are now weakly-typed, and much simpler.
  - API change: fields and tuples are now stand-alone classes in ::pqxx.
+ - API change: thread-safety field have_strerror_r is now have_safe_strerror.
  - Fixes compatibility problems between 9.x libpq and 7.x backend.
  - Absolutely requires a libpq version with PQescapeStringConn.
  - Absolutely requires libpq 8.0 or better.
  - Changes for C++0x.
  - Supports clang++.
+ - Sample headers for more recent Visual Studio versions.
  - Fixes binary-data escaping problems with postgres 9.0.
  - Fixes problems with binary-string handling and escaping.
  - notify_listener has been replaced with notification_receiver.
